syntax = "proto3";
option go_package = "github.gatech.edu/faasedge/feo/offloadproto";

package offload;
service OffloadStateHub {
    rpc UpdateState(NodeState) returns(UpdateStateResponse) {}
    rpc GetCandidate(CandidateQuery) returns(CandidateResponse){}
    rpc GetState(StateQuery) returns(StateResponse) {}
}

message StateQuery {
    string node_name = 1;
}

message StateResponse {
    repeated NodeState nodes = 1;
}
message CandidateQuery {
    string node_name = 1;
    string function_name = 2;
}
message CandidateResponse {
    string node = 1;
    FunctionInfo finfo = 2;
}

message UpdateStateResponse {
    bool success = 1;
}

message NodeState {
    string name = 1;
    repeated FunctionInfo finfo_list = 2;
}

message FunctionInfo {
    string function_name = 1;
    repeated int64 invoke_history = 2;
    float qlen = 3;
}